# kyma-companion

./: .dockerignore  .gitignore  .mlc.config.json  AGENTS.md  CODEOWNERS  Dockerfile  Dockerfile.langfuse  Dockerfile.langfuse-worker  Plan.md  README.md  a.json  architecture.md  component-config.yaml  docker-compose.observability.yml  docker-compose.yml  external-images.yaml  launch.json  lol.txt  models.yaml  mypy.ini  pyproject.toml  renovate.json  ruff.toml  sec-scanners-config.yaml  supervisor_agent.py  temp_test_run_data.json
doc_indexer/: .dockerignore  .gitignore  Dockerfile  README.md  docs_sources.json  e2e_docs_sources.json  pyproject.toml  ruff.toml
doc_indexer/src/: main.py
doc_indexer/src/fetcher/: fetcher.py  scroller.py  source.py
doc_indexer/src/indexing/: adaptive_indexer.py  advanced_indexer.py  constants.py  contants.py  indexer.py  local_file_indexer.py
doc_indexer/src/utils/: documents.py  hana.py  logging.py  model_config.py  models.py  settings.py  utils.py
doc_indexer/tests/: conftest.py
doc_indexer/tests/e2e/: test_main.py
doc_indexer/tests/integration/: conftest.py  test_main.py
doc_indexer/tests/integration/fetcher/: test_docs_sources.json  test_fetcher.py
doc_indexer/tests/integration/indexing/: test_indexer.py  test_local_file_indexer.py
doc_indexer/tests/integration/utils/: test_embeddings.py
doc_indexer/tests/unit/: test_main.py
doc_indexer/tests/unit/fetcher/: sample_os_walk_output.json  test_fetcher.py  test_scroller.py  test_source.py
doc_indexer/tests/unit/fixtures/single_doc/: sample-1.md
doc_indexer/tests/unit/indexing/: test_adaptive_indexer.py  test_advanced_indexer.py  test_indexer.py  test_local_file_indexer.py
doc_indexer/tests/unit/utils/: test_documents.py  test_models.py  test_utils.py
kubernetes-mcp-server/python/: pyproject.toml
kubernetes-mcp-server/python/kubernetes_mcp_server/: __init__.py  kubernetes_mcp_server.py
tests/blackbox/: .deepeval_telemetry.txt  .gitignore  .promptfoorc.yaml  PROMPTFOO_README.md  README.md  evaluation.md  package.json  pyproject.toml  ruff.toml  validation.md
tests/blackbox/config/validation/: models.yml
tests/blackbox/data/: deploy-all.sh
tests/blackbox/data/api-test-crd-config/: cr-eu-only.yaml  cr-general.yaml
tests/blackbox/data/namespace-scoped/10_kyma_function_syntax_error/: deployment.yml  scenario.yml  undeploy.sh  validation.yml
tests/blackbox/data/namespace-scoped/11_kyma_serverless_function_no_replicas/: deploy.sh  scenario.yml  validation.yml
tests/blackbox/data/namespace-scoped/12_kyma_subscription_invalid_sink/: deploy.sh  deployment.yml  scenario.yml  validation.yml
tests/blackbox/data/namespace-scoped/13_kyma_subscription_invalid_source/: scenario.yml  validation.yml
tests/blackbox/data/namespace-scoped/14_kyma_subscription_old_event_type/: deployment.yml  scenario.yml  validation.yml
tests/blackbox/data/namespace-scoped/15_nginx_oom/: scenario.yml  validation.yml
tests/blackbox/data/namespace-scoped/16_nginx_wrong_image/: scenario.yml  validation.yml
tests/blackbox/data/namespace-scoped/17_whoami_too_many_replicas/: scenario.yml  validation.yml
tests/blackbox/data/namespace-scoped/1_bitnami_role_missing/: deployment.yml  scenario.yml  validation.yml
tests/blackbox/data/namespace-scoped/2_bitnami_wrong_rbac_permissions/: scenario.yml  validation.yml
tests/blackbox/data/namespace-scoped/3_busybox_no_kubectl_binary/: deploy.sh  scenario.yml  (+1 more)
tests/blackbox/data/validation/: bitnami_no_rbac_permissions.yml  bitnami_role_missing.yml  bitnami_wrong_rbac_permissions.yml  busybox_no_kubectl_binary.yml  kyma_app_apirule_broken.yml  kyma_app_serverless_syntax_err.yml  kyma_eventing_wrong_event_type.yml  kyma_serverless_function_no_replicas.yml  kyma_serverless_function_not_ready.yml  kyma_subscription_old_event_type.yml  nginx_oom.yml  nginx_wrong_image.yml  whoami_too_many_replicas.yml
tests/blackbox/evaluation/: README.md  run.py
tests/blackbox/scripts/: convert_to_promptfoo.py  test_provider.js  validate_setup.sh  validate_test_yaml.js
tests/blackbox/src/: companion_provider.js  run_a2a_evaluation.py  run_evaluation.py  run_validation.py  test_validation_data.py
tests/blackbox/src/api_tests/: test_cluster_region_api.py  test_conversations_sync_api.py  test_tools_api.py  test_tools_api_encrypted.py
tests/blackbox/src/common/: config.py  logger.py  metrics.py  output.py  utils.py
tests/blackbox/src/evaluation/: process_a2a_scenario.py  process_scenario.py
tests/blackbox/src/validation/: model_validation.py  scenario_mock_responses.py  validation.py  validator.py
tests/blackbox/tests/: 01_bitnami_role_missing.yaml  02_bitnami_wrong_rbac_permissions.yaml  03_busybox_no_kubectl_binary.yaml  04_k8s_improper_persistent_storage_query1.yaml  04_k8s_improper_persistent_storage_query2.yaml  04_k8s_improper_persistent_storage_query3.yaml  05_k8s_incorrect_liveness_probe.yaml  06_k8s_wrong_svc_labels.yaml  07_kyma_app_apirule_broken.yaml  08_kyma_app_serverless_syntax_err.yaml  10_kyma_function_syntax_error.yaml  11_kyma_serverless_function_no_replicas.yaml  12_kyma_subscription_invalid_sink.yaml  13_kyma_subscription_invalid_source.yaml  14_kyma_subscription_wrong_sink_url.yaml  15_nginx_oom.yaml  16_nginx_wrong_image.yaml  18_kyma_function_wrong_dependencies.yaml  19_question_what_is_kyma.yaml  20_question_kyma_regions.yaml  21_question_add_module.yaml  22_question_kyma_modules.yaml  23_question_use_istio.yaml  24_question_expose_endpoint.yaml  25_question_kyma_vs_hyperscalers.yaml  26_question_kyma_vs_cloudfoundry.yaml
tests/blackbox/validation/: README.md  main.py  pyproject.toml
tests/eval/: README.md  main.py  plan.md  problem.txt  pyproject.toml
tests/eval/problem_yamls/: func-with-syntax-error-only-func.yaml  func-with-syntax-error.yaml  func-with-wrong-lang.yaml  nginx-image-typo.yaml  whoami-wrong-quota.yaml  whoami-wrong-quota2.yaml
tests/eval/src/data/: fixtures_calibration.py  fixtures_problems.py  fixtures_scenarios.py
tests/eval/src/logic/: chat_models.py  evaluate.py  mock_assistant.py  validate.py
(+1079 files in other folders)
