[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "kyma-companion"
version = "0.1.0"
description = "Kyma Companion is an AI Kyma assistant that helps you to manage your Kyma runtime"
readme = "README.md"
license = "Apache-2.0"
authors = [
  { name = "Muhammad Faizan", email = "m.faizan@sap.com" },
  { name = "Friedrich Wilken", email = "jens.wilken@sap.com" },
  { name = "Piotr Bochynski", email = "piotr.bochynski@sap.com" },
  { name = "Mansur Uralov", email = "m.uralov@sap.com" },
  { name = "Mohammad Tanweer Salah", email = "mohammad.tanweer.salah@sap.com" },
]
requires-python = "==3.13.*"
dependencies = [
  "a2a-sdk[http-server] (>=1.1.0,<2.0)",
  "aiohttp (>=3.14.1,<3.15.0)",
  "cryptography (>=49.0.0,<50.0.0)",
  "fastapi[standard] (>=0.139.0,<0.140.0)",
  "hdbcli (>=2.29.23,<3.0.0)",
  "kubernetes (>=36.0.2,<37.0.0)",
  "langchain (>=1.2,<2.0)",
  "langchain-core (>=1.4.8,<2.0.0)",
  "langchain-hana (>=1.1.1,<2.0.0)",
  "langfuse (>=4.12.0,<5.0.0)",
  "langgraph (>=1.2.6,<2.0.0)",
  "prometheus-client (>=0.25.0,<0.26.0)",
  "pyjwt (>=2.13.0,<3.0.0)",
  "python-decouple (>=3.8,<4.0)",
  "python-json-logger (>=4.1.0,<5.0.0)",
  "python-multipart (>=0.0.32,<0.0.33)",
  "redis (>=8.0.1,<9.0.0)",
  "requests (>=2.34.2,<3.0.0)",
  "sap-ai-sdk-gen[all] (>=6.7.0,<7.0.0)",
  "scrubadub (>=2.0.1,<3.0.0)",
  "starlette (>=1.3.1,<2.0.0)",
  "tenacity (>=9.1.4,<10.0.0)",
  "tiktoken (>=0.13.0,<0.14.0)",
  "uvicorn (>=0.49.0,<0.50.0)"
]
[tool.poetry]
package-mode = false

[tool.poetry.group.test.dependencies]
aioresponses = ">=0.7.9,<0.7.10"
deepeval = "^4.0.7"
fakeredis = "^2.36.2"
prettytable = "^3.18.0"
pytest = "^9.1.0"
pytest-aioresponses = "^0.3.0"
pytest-asyncio = "^1.4.0"
pytest-cov = {extras = ["all"], version = "^7.1.0"}
pytest-dotenv = "^0.5.2"
pytest-mock = "^3.15.1"
pytest-rerunfailures = "^16.3"
pytest-sugar = "^1.1.1"
pytest-xdist = "^3.8.0"
pyyaml = "^6.0.3"
ragas = "^0.4.3"
requests = "^2.33.0"
termcolor = "^3.3.0"
types-pyyaml = "^6.0.12.20260518"

[tool.poetry.group.dev.dependencies]
ipython = "^9.15.0"
mypy = "^2.1.0"
poethepoet = "^0.47.0"
poetry-plugin-sort = "^0.3.0"
ruff = "^0.15.20"
types-requests = "^2.33.0.20260518"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
pythonpath = ["src"]
testpaths = ["tests"]
env_files = [".env.test"]
asyncio_default_fixture_loop_scope = "function"

[tool.poe.tasks]
lint = "ruff check ."
typecheck = "mypy . --pretty"
format = "ruff format . --check"
codecheck = ["lint", "typecheck", "format"]
format-fix = "ruff format ."
lint-fix = "ruff check . --fix"
code-fix = ["format-fix", "lint-fix"]
test = "pytest -n 2 -v tests/unit"
test-local = "pytest -n auto -v tests/unit"
test-integration = "pytest -n 2 -v tests/integration -x --reruns=6 --reruns-delay=10 -r=aR"
test-integration-local = "pytest -n auto -v tests/integration -x --reruns=6 --reruns-delay=10 -r=aR"
# Subset tasks: each runs a logical slice of integration tests with -n 4 for higher parallelism.
# These are invoked by the CI matrix; use the subset-specific label to rerun only one slice.
test-integration-kyma-agent = "pytest -n 4 -v tests/integration/agents/kyma -x --reruns=6 --reruns-delay=10 -r=aR"
test-integration-k8s-supervisor = "pytest -n 4 -v tests/integration/agents/k8s tests/integration/agents/supervisor tests/integration/agents/test_common_node.py tests/integration/agents/test_followup_questions.py -x --reruns=6 --reruns-delay=10 -r=aR"
test-integration-gatekeeper = "pytest -n 4 -v tests/integration/agents/test_gatekeeper_node.py tests/integration/agents/test_gatekeeper_security.py tests/integration/agents/summarization tests/integration/agents/common -x --reruns=6 --reruns-delay=10 -r=aR"
test-integration-rag-services = "pytest -n 4 -v tests/integration/rag tests/integration/services -x --reruns=6 --reruns-delay=10 -r=aR"
run = "fastapi run src/main.py --port 8000"
run-local = "fastapi dev src/main.py --port 8000"
sort = "poetry sort"
lint-workflows = "bash scripts/shell/lint-workflows.sh"
pre-commit-check = ["sort", "code-fix", "codecheck", "test-local", "lint-workflows"]
