[project]
name = "doc_indexer"
version = "0.1.0"
description = "Indexes Kyma documents for RAG"
authors = [
  { name = "Muhammad Faizan", email = "m.faizan@sap.com" },
  { name = "Friedrich Wilken", email = "jens.wilken@sap.com" },
  { name = "Piotr Bochynski", email = "piotr.bochynski@sap.com" },
  { name = "Mansur Uralov", email = "m.uralov@sap.com" },
  { name = "Mohammad Tanweer Salah", email = "mohammad.tanweer.salah@sap.com" },
]
readme = "README.md"
license = "Apache-2.0"
requires-python = "==3.12.*"
dependencies = [
  "hdbcli (>=2.22.29,<3.0.0)",
  "python-decouple (>=3.8,<4.0.0)",
  "generative-ai-hub-sdk[all] (>=4.0.0,<5.0.0)",
  "python-dotenv (>=1.0.1,<2.0.0)",
  "unstructured (>=0.18.0,<0.19.0)",
  "markdown (>=3.7,<4.0.0)",
  "pydantic (>=2.9.2,<3.0.0)",
  "langchain-hana (>=0.3.2,<0.4.0)",
]

[tool.poetry]
packages = [{ include = "src" }]
package-mode = false

[tool.poetry.group.test.dependencies]
poethepoet = "^0.37.0"
black = "^25.0.0"
ruff = "^0.13.3"
mypy = "^1.13.0"
pytest = "^9.0.0"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.poe.tasks]
format = "black . --check"
lint = "ruff check ."
lint-fix = "ruff check . --fix"
format-fix = "black ."
typecheck = "mypy . --pretty --config-file ../mypy.ini"
codecheck = ["lint", "typecheck", "format"]
test-unit = "pytest tests/unit"
test-integration = "pytest tests/integration"
test = ["test-unit", "test-integration"]
