[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "doc_indexer"
version = "0.1.0"
description = "Indexes Kyma documents for RAG"
authors = [
  { name = "Muhammad Faizan", email = "m.faizan@sap.com" },
  { name = "Friedrich Wilken", email = "jens.wilken@sap.com" },
  { name = "Piotr Bochynski", email = "piotr.bochynski@sap.com" },
  { name = "Mansur Uralov", email = "m.uralov@sap.com" },
  { name = "Mohammad Tanweer Salah", email = "mohammad.tanweer.salah@sap.com" },
]
readme = "README.md"
license = "Apache-2.0"
requires-python = "==3.13.*"
dependencies = [
  "generative-ai-hub-sdk[all] (>=4.0.0,<5.0.0)",
  "hdbcli (>=2.22.29,<3.0.0)",
  "langchain-hana (>=1.0.2,<1.1.0)",
  "markdown (>=3.7,<4.0.0)",
  "pydantic (>=2.9.2,<3.0.0)",
  "python-decouple (>=3.8,<4.0.0)",
  "python-dotenv (>=1.0.1,<2.0.0)",
  "unstructured (>=0.18.0,<0.19.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.test.dependencies]
mypy = "^1.13.0"
poethepoet = "^0.40.0"
pytest = "^9.0.0"
ruff = "^0.15.2"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.poe.tasks]
format = "ruff format . --check"
lint = "ruff check ."
lint-fix = "ruff check . --fix"
format-fix = "ruff format ."
code-fix = ["format-fix", "lint-fix"]
typecheck = "mypy . --pretty --config-file ../mypy.ini"
codecheck = ["lint", "typecheck", "format"]
test-unit = "pytest tests/unit"
test-integration = "pytest tests/integration"
test = ["test-unit", "test-integration"]
sort = "poetry sort"
pre-commit-check = ["sort", "code-fix", "codecheck", "test"]
