[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "doc_indexer"
version = "0.1.0"
description = "Indexes Kyma documents for RAG"
authors = [
  { name = "Muhammad Faizan", email = "m.faizan@sap.com" },
  { name = "Friedrich Wilken", email = "jens.wilken@sap.com" },
  { name = "Piotr Bochynski", email = "piotr.bochynski@sap.com" },
  { name = "Mansur Uralov", email = "m.uralov@sap.com" },
  { name = "Mohammad Tanweer Salah", email = "mohammad.tanweer.salah@sap.com" },
]
readme = "README.md"
license = "Apache-2.0"
requires-python = "==3.13.*"
dependencies = [
  "hdbcli (>=2.28.19,<3.0.0)",
  "langchain-hana (>=1.0.2,<2.0.0)",
  "pydantic (>=2.12.5,<3.0.0)",
  "python-decouple (>=3.8,<4.0)",
  "sap-ai-sdk-gen[all] (>=6.7.0,<7.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.test.dependencies]
mypy = "^1.13.0"
poethepoet = "^0.42.0"
poetry-plugin-sort = "^0.3.0"
pytest = "^9.0.0"
ruff = "^0.15.2"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
  "unit: marks tests as unit tests (fast, no external dependencies)",
  "integration: marks tests as integration tests (may require external services or API keys)"
]

[tool.poe.tasks]
format = "ruff format . --check"
lint = "ruff check ."
lint-fix = "ruff check . --fix"
format-fix = "ruff format ."
code-fix = ["format-fix", "lint-fix"]
typecheck = "mypy . --pretty --config-file ../mypy.ini"
codecheck = ["lint", "typecheck", "format"]
test-unit = "pytest tests/unit -v"
test-integration = "pytest tests/integration -v"
test-unit-marked = "pytest -m unit -v"
test-integration-marked = "pytest -m integration -v"
test = ["test-unit", "test-integration"]
test-all = "pytest -v"
sort = "poetry sort"
pre-commit-check = ["sort", "code-fix", "codecheck", "test-unit"]
