[project]
name = "Kyma-Companion-Blackbox-Tests"
version = "0.1.0"
description = "Kyma Companion Blackbox Tests"
readme = "README.md"
license = "Apache-2.0"
authors = [
  { name = "Muhammad Faizan", email = "m.faizan@sap.com" },
  { name = "Friedrich Wilken", email = "jens.wilken@sap.com" },
  { name = "Mansur Uralov", email = "m.uralov@sap.com" },
  { name = "Mohammad Tanweer Salah", email = "mohammad.tanweer.salah@sap.com" },
]
requires-python = "==3.13.*"
dependencies = [
  "ai-core-sdk (>=2.6.2,<3.0.0)",
  "cryptography (>=44.0.2,<45.0.0)",
  "fastapi[standard] (>=0.115.11,<0.116.0)",
  "generative-ai-hub-sdk[all] (>=4.12.4,<5.0.0)",
  "github-action-utils (>=1.1.0,<2.0.0)",
  "hdbcli (>=2.23.27,<3.0.0)",
  "kubernetes (>=30.0.0,<33.0.0)",
  "langgraph[all] (>=0.4.7,<0.5.0)",
  "prometheus-client (>=0.21.1,<0.22.0)",
  "pyjwt (>=2.10.1,<3.0.0)",
  "python-decouple (>=3.8,<4.0)",
  "redis (>=5.2.1,<6.0.0)",
  "requests (>=2.32.3,<3.0.0)",
  "scrubadub (>=2.0.1,<3.0.0)",
  "tenacity (>=9.0.0,<10.0.0)",
  "tiktoken (>=0.9.0,<0.10.0)",
  "uvicorn (>=0.34.0,<0.35.0)"
]
[tool.poetry]
packages = [{ include = "src" }]
package-mode = false

[tool.poetry.group.test.dependencies]
deepeval = { extras = ["all"], version = "^3.0.1" }
fakeredis = "^2.27.0"
prettytable = "^3.15.1"
pytest = "^8.3.5"
pytest-asyncio = "^0.25.3"
pytest-dotenv = "^0.5.2"
pytest-mock = "^3.14.0"
pytest-rerunfailures = "^12.0"
pyyaml = "^6.0.2"
termcolor = "^2.5.0"
types-pyyaml = "^6.0.12.20241230"

[tool.poetry.group.dev.dependencies]
cryptography = "^44.0.2"
ipython = "^9.0.2"
mypy = "^1.15.0"
poethepoet = "^0.33.0"
poetry-plugin-sort = "^0.3.0"
ruff = "^0.9.10"
types-requests = "^2.32.0.20250306"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
pythonpath = ["src"]
testpaths = ["tests"]
env_files = [".env.test"]
asyncio_default_fixture_loop_scope = "function"

[tool.poe.tasks]
lint = "ruff check ."
typecheck = "mypy . --pretty"
format = "ruff format . --check"
codecheck = ["lint", "typecheck", "format"]
format-fix = "ruff format ."
lint-fix = "ruff check . --fix"
code-fix = ["format-fix", "lint-fix"]
sort = "poetry sort"
pre-commit-check = ["sort", "code-fix", "codecheck"]
run-evaluation = "python src/run_evaluation.py"
