[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "Kyma-Companion-Blackbox-Tests"
version = "0.1.0"
description = "Kyma Companion Blackbox Tests"
readme = "README.md"
license = "Apache-2.0"
authors = [
  { name = "Muhammad Faizan", email = "m.faizan@sap.com" },
  { name = "Friedrich Wilken", email = "jens.wilken@sap.com" },
  { name = "Mansur Uralov", email = "m.uralov@sap.com" },
  { name = "Mohammad Tanweer Salah", email = "mohammad.tanweer.salah@sap.com" },
]
requires-python = "==3.13.*"
dependencies = [
  "ai-core-sdk (>=2.6.2,<3.0.0)",
  "cryptography (>=46.0.5,<47.0.0)",
  "fastapi[standard] (>=0.135.1,<0.136.0)",
  "generative-ai-hub-sdk[all] (>=4.12.4,<5.0.0)",
  "github-action-utils (>=1.1.0,<2.0.0)",
  "hdbcli (>=2.27.24,<3.0.0)",
  "kubernetes (>=35.0.0,<36.0.0)",
  "langgraph[all] (>=0.6.11,<0.7.0)",
  "prometheus-client (>=0.24.1,<0.25.0)",
  "pyjwt (>=2.12.0,<3.0.0)",
  "python-decouple (>=3.8,<4.0)",
  "redis (>=7.3.0,<8.0.0)",
  "requests (>=2.32.5,<3.0.0)",
  "scrubadub (>=2.0.1,<3.0.0)",
  "tenacity (>=9.0.0,<10.0.0)",
  "tiktoken (>=0.12.0,<0.13.0)",
  "uvicorn (>=0.41.0,<0.42.0)"
]
[tool.poetry]
package-mode = false

[tool.poetry.group.test.dependencies]
deepeval = { extras = ["all"], version = "^3.2.9" }
fakeredis = "^2.34.1"
prettytable = "^3.17.0"
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
pytest-dotenv = "^0.5.2"
pytest-mock = "^3.15.1"
pytest-rerunfailures = "^12.0"
pyyaml = "^6.0.2"
termcolor = "^3.3.0"
types-pyyaml = "^6.0.12.20250915"

[tool.poetry.group.dev.dependencies]
cryptography = "^46.0.5"
ipython = "^9.11.0"
mypy = "^1.19.1"
poethepoet = "^0.42.1"
poetry-plugin-sort = "^0.3.0"
ruff = "^0.15.6"
types-requests = "^2.32.4.20260107"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
pythonpath = ["src"]
testpaths = ["tests"]
env_files = [".env.test"]
asyncio_default_fixture_loop_scope = "function"

[tool.poe.tasks]
lint = "ruff check ."
typecheck = "mypy . --pretty"
format = "ruff format . --check"
codecheck = ["lint", "typecheck", "format"]
format-fix = "ruff format ."
lint-fix = "ruff check . --fix"
code-fix = ["format-fix", "lint-fix"]
sort = "poetry sort"
pre-commit-check = ["sort", "code-fix", "codecheck"]
run-evaluation = "python src/run_evaluation.py"
